BAU fix bad logline
Fixed an issue in the auth error gateway cleanup service where some values were being logged in the wrong order